--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,7 +97,7 @@
                 <TextView
                     android:id="@+id/readerName"
                     style="@style/ReaderName"
-                    android:text="محمد صديق المنشاوي"
+                    android:text="@string/Mohammed"
                     android:textSize="@dimen/readerNameFontSize"
                     app:layout_constraintBottom_toBottomOf="@+id/readerImg"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +112,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.5"
-                     />
+                    android:contentDescription="@string/imgdes" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -126,7 +126,7 @@
                 <TextView
                     android:id="@+id/readerName1"
                     style="@style/ReaderName"
-                    android:text="عامر الكاظمي"
+                    android:text="@string/Ammer"
                     app:layout_constraintBottom_toBottomOf="@+id/readerImg1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/readerImg1"
@@ -140,7 +140,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.5"
-                    app:tint="@color/dim_gray"/>
+                    app:tint="@color/dim_gray"
+                    android:contentDescription="@string/imgdes"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -153,7 +154,7 @@
                 <TextView
                     android:id="@+id/readerName2"
                     style="@style/ReaderName"
-                    android:text="محمود الحصيري "
+                    android:text="@string/Mahomood"
                     app:layout_constraintBottom_toBottomOf="@+id/readerImg2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/readerImg2"
@@ -167,7 +168,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.5"
-                     />
+                    android:contentDescription="@string/imgdes"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -188,7 +189,7 @@
             android:id="@+id/totalTime"
             android:layout_width="@dimen/xLargeMargin"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/mediumMargin"
             android:gravity="center"
             android:text="@string/total_time"
             android:textColor="@color/whiteColor"
@@ -220,9 +221,9 @@
             android:id="@+id/preImg"
             android:layout_width="0dp"
             android:layout_height="@dimen/control_img_height"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/mediumMargin"
             android:layout_marginEnd="@dimen/mediumMargin"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="@dimen/mediumMargin"
             android:contentDescription="@string/imgdes"
             app:layout_constraintBottom_toBottomOf="@+id/playStopImg"
             app:layout_constraintDimensionRatio="1:1"
@@ -236,8 +237,8 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/control_img_height"
             android:layout_marginStart="@dimen/mediumMargin"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginTop="@dimen/mediumMargin"
+            android:layout_marginBottom="@dimen/mediumMargin"
             android:contentDescription="@string/imgdes"
             app:layout_constraintBottom_toBottomOf="@+id/playStopImg"
             app:layout_constraintDimensionRatio="1:1"
@@ -250,7 +251,7 @@
             android:id="@+id/currentTime"
             android:layout_width="@dimen/xLargeMargin"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/mediumMargin"
             android:gravity="center"
             android:text="@string/current_time"
             android:textColor="@color/whiteColor"
@@ -274,10 +275,10 @@
         <SeekBar
             android:id="@+id/seekBar"
             android:layout_width="0dp"
-            android:layout_height="15dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="4dp"
+            android:layout_height="@dimen/mediumMargin"
+            android:layout_marginStart="@dimen/smallMargin"
+            android:layout_marginTop="@dimen/mediumMargin"
+            android:layout_marginEnd="@dimen/smallMargin"
             android:progressBackgroundTint="@color/dim_gray"
             android:progressBackgroundTintMode="add"
             android:progressTint="@color/blueColor"
@@ -297,7 +298,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/preImg"
             app:srcCompat="@drawable/download"
-            app:tint="@color/dim_gray"/>
+            app:tint="@color/dim_gray"
+            android:contentDescription="@string/imgdes"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -316,7 +318,7 @@
             android:layout_marginStart="@dimen/mediumMargin"
             android:layout_marginTop="@dimen/largeMargin"
             android:layout_marginBottom="@dimen/largeMargin"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/imgdes"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
@@ -350,7 +352,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/zoomOut"
             app:srcCompat="@drawable/reader"
-            app:tint="@color/dim_gray"/>
+            app:tint="@color/dim_gray"
+            android:contentDescription="@string/imgdes"/>
 
         <TextView
             android:id="@+id/chooseReader"
@@ -383,14 +386,15 @@
             <ImageView
                 android:id="@+id/playUpImg"
                 android:layout_width="0dp"
-                android:layout_height="15dp"
-                android:layout_marginStart="8dp"
+                android:layout_height="@dimen/control_img_height"
+                android:layout_marginStart="@dimen/smallMargin"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintStart_toEndOf="@+id/textView16"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/play"
-                app:tint="@color/dim_gray" />
+                app:tint="@color/dim_gray"
+                android:contentDescription="@string/imgdes"/>
 
             <TextView
                 android:id="@+id/textView16"
@@ -402,10 +406,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.45"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/playUpImg"
-
-
-                />
+                app:layout_constraintTop_toTopOf="@+id/playUpImg" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
